test/libsolidity/syntaxTests/nameAndTypeResolution/539_array_length_invalid_expression_scientific_literal.sol
contract C {
    uint[1.111111E1111111111111] ids;
}
// ----
// TypeError: (22-44): Invalid array length, expected integer literal or constant expression.
